--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   </head>
+  <h1 style="color: red">віт пончиків</h1>
     <meta charsert="UTF-8"
-      <title>Simple
+      <title>Simple Project</title>
       </head>
   <body>
    <h1>Hello, world!</h1>
