--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   </head>
-  <h1 style="color: red">віт пончиків</h1>
+<h1 style="color: red; text-align: center">Світ пончиків</h1>
+<img src="/uploads/2023/02/donut.png" style="margin-left: 60px">
     <meta charsert="UTF-8"
       <title>Simple Project</title>
       </head>
